responseive and breakup image

--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
 						Enlight mindfulness
 
 					</a>
-					<button class="navbar-toggler" type="button" data-toggle="collapse"
+					<button class="navbar-toggler rs-hide-md" type="button" data-toggle="collapse"
 						data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
 						aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
 					</button>
-					<div class="collapse navbar-collapse justify-content-center pr-md-4" id="navbarSupportedContent">
+					<div class="collapse navbar-collapse justify-content-center pr-md-4 rs-hide-md" id="navbarSupportedContent">
 						<ul class="navbar-nav ml-auto rs-nav-list">
 							<li class="nav-item">
 								<a class="nav-link" href="#aboutus" class="rs-text-color--red">About</a>
@@ -120,8 +120,8 @@
 	<!-- About us -->
 	<div class="about-3 py-5 rs-about-section" id="aboutus">
 		<div class="container py-md-3">
-			<div class="d-flex rs-about-container">
-				<div class="about1 rs-about1">
+			<div class="row rs-about-container">
+				<div class=" col-sm-12 col-md-7 sabout1 rs-about1">
 					<h4 class="rs-text-color--red">ENLIGHT YOUR MIND-HEART-LIFE</h4>
 					<!-- <p class="details rs-text-color--blue ">Let's find the best version of yourself.</p> -->
 					<ul class="about-list rs-about-list">
@@ -278,7 +278,7 @@
 						</li>
 					</ul>
 				</div>
-				<div style="display: flex; flex-direction: row; justify-content: center; align-items: center; flex-grow: 1;">
+				<div class="col-sm-12 col-md-5" style="display: flex; flex-direction: row; justify-content: center; align-items: center; flex-grow: 1;">
 					<a class="rs-button-color--red text-white" style="padding: 15px 20px; max-height: 80px">
 						<span class="rs-blink">Book Appointment </span>
 					</a>
