--- a/index.html
+++ b/index.html
@@ -768,11 +768,11 @@
 		<div class="container p-4 pb-0">
 			<!-- Section: Social media -->
 			<section class="mb-4">
-<!-- whatsapp -->
+			<!-- whatsapp -->
 				<a
 				class="btn btn-primary  m-1"
 				style="background-color: #25D366"
-				href="https://api.whatsapp.com/message/OFX5GKZSWID6C1"
+				href=" https://wa.me/918853096756"
 				role="button"
 				target="_blank"
 				data-toggle="tooltip" title="Call or whatsapp us on: +91 8853096756">
@@ -795,7 +795,7 @@
 				 class="btn btn-primary  m-1"
 				 style="background-color: #55acee;"
 				 target="_blank"
-				 href="https://www.instagram.com/enlightmindfulness/"
+				 href="https://twitter.com/EnlightMindful1"
 				 role="button"
 				 ><i class="fab fa-twitter"></i
 				></a>
@@ -832,22 +832,20 @@
 
 				 ><i class="fab fa-linkedin-in"></i
 				></a>
-
+				<!-- medium -->
 				<a
 				class="btn btn-primary  m-1"
 				style="background-color: #333333;"
 				href="https://medium.com/@enlightmindfulness586"
 				role="button"
-				target="_blank">
+				target="_blank"
+				data-toggle="tooltip"
+				title="Read blogs"
+				>
 
 				<i class="fab fa-medium-m"></i>
 			   </a>
-
-
-
-
 			   
-
 			</section>
 			<!-- Section: Social media -->
 		  </div>
