book appointment link

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 					</ul>
 				</div>
 				<div class="col-sm-12 col-md-5" style="display: flex; flex-direction: row; justify-content: center; align-items: center; flex-grow: 1;">
-					<a class="rs-button-color--red text-white" style="padding: 15px 20px; max-height: 80px">
+					<a class="rs-button-color--red text-white" style="padding: 15px 20px; max-height: 80px"  target="_blank" href="https://forms.gle/nDV1xhfJ2YDdK892A">
 						<span class="rs-blink">Book Appointment </span>
 					</a>
 				</div>
